# ai-hub

./: package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: main.yml  release.yml
src/: App.css  App.tsx  main.tsx  routeTree.gen.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src/routes/: __root.tsx  index.tsx
src/routes/explorer/: index.tsx
src/routes/home/: index.tsx
src/store/: index.ts
